codearti/code/micro-g1-k8s/k8s/4-2-deploy-obser-metric.yaml
### Deploy Grafana
apiVersion: apps/v1
kind: Deployment
metadata:
 name: grafana-deploy
 namespace: obs-mon
 labels:
   app: grafana
   version: v1
spec:
 replicas: 1
 selector:
   matchLabels:
     app: grafana
     version: v1
 template:
   metadata:
     labels:
       app: grafana
       version: v1
   spec:
     containers:
       - name: grafana
         image: grafana/grafana:latest
         ports:
           - containerPort: 3000
         volumeMounts:
           - name: grafana-storage
             mountPath: /var/lib/grafana
         resources:
           requests:
             memory: "100Mi"
             cpu: "200m"
           limits:
             memory: "250Mi"
             cpu: "400m"
     volumes:
       - name: grafana-storage
         emptyDir: {}

---
## Deploy Jaeger
apiVersion: apps/v1
kind: Deployment
metadata:
 name: jaeger-deploy
 namespace: obs-mon
 labels:
   app: jaeger
   version: v1
spec:
 replicas: 1
 selector:
   matchLabels:
     app: jaeger
     version: v1
 template:
   metadata:
     labels:
       app: jaeger
       version: v1
   spec:
     containers:
       - name: jaeger
         image: jaegertracing/all-in-one:1.61.0
         ports:
           - containerPort: 16686
           - containerPort: 4317
         resources:
           requests:
             memory: "40Mi"
             cpu: "50m"
           limits:
             memory: "100Mi"
             cpu: "100m"

---
# Deploy ElasticSearch
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-deploy
  namespace: obs-mon
  labels:
    app: elasticsearch
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
      version: v1
  template:
    metadata:
      labels:
        app: elasticsearch
        version: v1
    spec:
      containers:
        - name: elasticsearch
          image: elasticsearch:8.15.0
          ports:
            - containerPort: 9200
          resources:
            requests:
              memory: "650Mi"
              cpu: "400m"
            limits:
              memory: "850Mi"
              cpu: "650m"
          volumeMounts:
            - name: elasticsearch-data
              mountPath: /usr/share/elasticsearch/data
      volumes:
        - name: elasticsearch-data
          persistentVolumeClaim:
            claimName: elasticsearch-pvc

---
# Deploy Logstash
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash-deploy
  namespace: obs-mon
  labels:
    app: logstash
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
      version: v1
  template:
    metadata:
      labels:
        app: logstash
        version: v1
    spec:
      containers:
        - name: logstash
          image: docker.elastic.co/logstash/logstash:8.15.1
          volumeMounts:
            - name: logstash-config-volume
              mountPath: /usr/share/logstash/pipeline/logstash.conf
              subPath: logstash.conf
          ports:
            - containerPort: 5044
            - containerPort: 9600
      volumes:
        - name: logstash-config-volume
          configMap:
            name: logstash-config

---
#Deploy Kibana
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana-deploy
  namespace: obs-mon
  labels:
    app: kibana
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
      version: v1
  template:
    metadata:
      labels:
        app: kibana
        version: v1
    spec:
      containers:
        - name: kibana
          image: kibana:8.15.0
          ports:
            - containerPort: 5601
          resources:
            requests:
              memory: "650Mi"
              cpu: "400m"
            limits:
              memory: "850Mi"
              cpu: "650m"
          volumeMounts:
            - name: kibana-config-volume
              mountPath: /usr/share/kibana/config/kibana.yml
              subPath: kibana.yml
      volumes:
        - name: kibana-config-volume
          configMap:
            name: kibana-config

---
# Deploy Prometheus
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: prometheus-deploy
   namespace: obs-mon
   labels:
     app: prometheus
     version: v1
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: prometheus
       version: v1
   template:
     metadata:
       labels:
         app: prometheus
         version: v1
     spec:
       containers:
         - name: prometheus
           image: prom/prometheus:v2.54.1
           args:
             - --config.file=/etc/prometheus/prometheus.yml
           volumeMounts:
             - name: prometheus-config-volume
               mountPath: /etc/prometheus/prometheus.yml
               subPath: prometheus.yaml
           ports:
             - containerPort: 9090
           resources:
             requests:
               memory: "100Mi"
               cpu: "100m"
             limits:
               memory: "150Mi"
               cpu: "150m"
       volumes:
         - name: prometheus-config-volume
           configMap:
             name: prometheus-config

---
# Deploy Kafka Confluent
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-kraft-deploy
  namespace: obs-mon
  labels:
    app: kafka-kraft
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-kraft
      version: v1
  template:
    metadata:
      labels:
        app: kafka-kraft
        version: v1
    spec:
      containers:
        - name: kafka-kraft
          image: confluentinc/cp-kafka:7.7.1
          ports:
            - containerPort: 9092
              name: external
            - containerPort: 29092
              name: internal
            - containerPort: 29093
              name: controller
            - containerPort: 9101
              name: jmx
          resources:
            requests:
              memory: "250Mi"
              cpu: "250m"
            limits:
              memory: "450Mi"
              cpu: "400m"

---
 # Control center kafka
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: control-center-deploy
   namespace: obs-mon
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: control-center
   template:
     metadata:
       labels:
         app: control-center
     spec:
       containers:
         - name: control-center
           image: confluentinc/cp-enterprise-control-center:7.7.1
           env:
             - name: CONTROL_CENTER_BOOTSTRAP_SERVERS
               value: "kafka-kraft-service.obs-mon:29092"
             - name: CONTROL_CENTER_REPLICATION_FACTOR
               value: "1"
           ports:
             - containerPort: 9021
           resources:
             requests:
               memory: "450Mi"
               cpu: "200m"
             limits:
               memory: "800Mi"
               cpu: "500m"

---
# Kafka UI
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui-deploy
  namespace: obs-mon
  labels:
    app: kafka-ui
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
      version: v1
  template:
    metadata:
      labels:
        app: kafka-ui
        version: v1
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "150Mi"
              cpu: "50m"
            limits:
              memory: "350Mi"
              cpu: "200m"
